--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
         <section id="contenedorPrincipal">
             <div id="contenedorInterno">
-                <img id="img-activa" src="Recursos/img1.jpg" alt="galeria de imagenes">
+                <img id="imgActiva" src="Recursos/img1.jpg" alt="galeria de imagenes">
                 <button id="btnCierra" type="button">X</button>
-                <button id="btnAdelanta" type="button">&lt;</button>
-                <button id="btnRetrocede" type="button">&gt;</button>
+                <button id="btnAdelanta" type="button">&gt;</button>
+                <button id="btnRetrocede" type="button">&lt;</button>
             </div>
         </section>
     </main>
